# flux

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs  flux.desktop.in
scripts/: properties.py
src/: app.rs  file_properties.rs  main.rs  model.rs  style.css  ui_components.rs  utils.rs
themes/: 3d-glass.css  botanical-specimen.css  circuit-board.css  cyberpunk.css  default.css  drafting-table.css  exo-shell.css  iso-lab.css  kinetic-physics.css  matrix.css  monolith-structural.css  obsidian-kinetic.css  os-dark.css  os-light.css  plasma-core.css  pure-binary.css  steam.css  vintage.css
