[package]
name = "flux"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
relm4 = { version = "0.10.1", features = ["libadwaita"] }
adw = { package = "libadwaita", version = "0.8.1" }
gtk = { package = "gtk4", version = "0.10.3" }
dirs = "6.0"
rayon = "1.10.0"
tokio = { version = "1.40", features = ["rt", "rt-multi-thread"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
chrono = "0.4.43"
sha2 = "0.10.9"
